[package]
name = "parsing-json"
version = "0.1.0"
authors = ["Muhammad Syakir bin Mohd Haris <syakirharis25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
